<resources>
    <string name="app_name">AdarshIndia</string>
    <string name="loan">LOAN</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_state">Select State</string>
    <string name="gender">Gender :</string>
    <string name="female_only">Female only</string>
    <string name="by_continuing_you_accept_our_privacy_policy_and_term_of_use">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="ch_terms">Check terms condition and privacy policy</string>
    <string name="signin">Sign into you account</string>
    <string name="you_can_log_in_with_your_mobile_number">You can log in with your mobile number.</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_signin">Don\'t have an account?.<u>SIGNIN</u></string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="a_four_digit_code_hase_been_sent_to_your_mobile_number">A Four digit code hase been sent to your mobile number.</string>
    <string name="kindly_enter_the_code_to_continue">Kindly enter the code to continue.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="let_u00e2_u0080_u0099s_setup_your_pin">Let setup your PIN</string>
    <string name="loan_apply">Loan Apply</string>
    <string name="viewstatus">View Status</string>
    <string name="education_help">Education Help Apply</string>
    <string name="medical_help">Medical Help Apply</string>
    <string name="pregnacny_help">Pregnency Help Apply</string>
    <string name="death_help">Death Help Apply</string>
    <string name="other_help">Other Help Apply</string>
    <string name="setting">Setting</string>
    <string name="support">Support</string>
    <string name="kyc">Kyc</string>
    <string name="home">Home</string>
    <string name="apply_for_a_loan">Apply for a Loan</string>
    <string name="how_much_do_you_want_to_borrow">How much do you want to borrow?</string>
    <string name="why_are_you_want_loan">Why are you want loan?</string>
    <string name="have_you_any_running_loan">Have you any running loan?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="apply">APPLY</string>
    <string name="enter_loan_amount">Please enter loan amount</string>
    <string name="why_loan">Enter why you want to loan?</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="complete_your_kyc">Complete your KYC</string>
    <string name="for_the_purpose_of_industry_regulation_your_details_are_required">For the purpose of industry regulation, your details are required.</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="father_husband_occupation">Father/husband occupation</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="dob">DOB</string>
    <string name="altername_mobile_number">Altername mobile number</string>
    <string name="guardian_name">Guardian name</string>
    <string name="guardian_mobile_number">Guardian mobile number</string>
    <string name="guadian_occupation">Guadian Occupation</string>
    <string name="monthly_income">Monthly income</string>
    <string name="no_of_family_memebers">No of family memebers</string>
    <string name="who_are_in_the_family">Who are in the family?</string>
    <string name="by_continuing_you_are_acknowledging_that_you_have_read_understood_and_agreed_to_the_kyc_s_terms_and_conditions_and_privacy_policy">By continuing, you are acknowledging that you have read, understood and agreed to the KYC\'s Terms and Conditions and Privacy Policy</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_first">Enter first name</string>
    <string name="enter_lastname">Enter last name</string>
    <string name="father_husband_name">Father/husband name</string>
    <string name="enter_father">Enter father name</string>
    <string name="enter_fathersurname">Enter father surname</string>
    <string name="father_occ">Enter father occupation</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="entedob">Enter DOB</string>
    <string name="enter_alternate">Enter altenate number</string>
    <string name="enter_gua">Enter guardian name</string>
    <string name="enter_gaudian_sur">Enter guardian surname</string>
    <string name="uplaodproof">Upload Proof Of Address</string>
    <string name="this_will_also_help_us_identify_that_it_is_you_running_this_account">This will also help us identify that it is you running this account</string>
    <string name="residenatia">Residential Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="selectaddresprood">Select Proof of Address Document type</string>
    <string name="bank_statement">Bank statement</string>
    <string name="proof_of_address">Proof of Address</string>
    <string name="enter_residentail">Enter residential address</string>
    <string name="enter_postal">Enter postal code</string>
    <string name="upload_identity">Upload Identity Document</string>
    <string name="you_can_upload_any_identity_document_from_the_options_below_however_some_require_front_and_back_upload_this_will_help_us_identify_that_this_is_you">You can upload any Identity document from the options below, However some require front and back upload. This will help us identify that this is you!</string>
    <string name="adhar_number">Aadhar Number</string>
    <string name="aadhar_front">Aadhar Front</string>
    <string name="pan_number">Pan Number</string>
    <string name="enter_bankaccount">Enter Bank Account number</string>
    <string name="aadhar_back">Aadhar Back</string>
    <string name="pan_card">Pan Card</string>
    <string name="ifsccode">IFSC Code</string>
    <string name="bankname">Bank Name</string>
    <string name="voter_id_number">Voter Id Number</string>
    <string name="voterfront">Voter ID Front</string>
    <string name="voter_id_back">Voter Id Back</string>
    <string name="upload_your_passport_photo">Upload Your passport photo</string>
    <string name="forgot_pin"><u>Forgot PIN</u>></string>
    <string name="setpinagain">Set your pin again</string>
    <string name="cantgobank">Cant go back while timer is running.</string>
    <string name="chooseone">choose one</string>
    <string name="passbookphoto">Passbook photo</string>
    <string name="enter_adhar">Enter adhar number</string>
    <string name="enterpan">Enter pan card number</string>
    <string name="ente_bankaccount">Enter bank account number</string>
    <string name="enter_ifsc">Enter ifsc code</string>
    <string name="enter_bankname">Enter bank name</string>
    <string name="entervoter">Enter voter Id</string>
    <string name="donate">Donate</string>

</resources>