<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        tools:context=".ui.LoanActivity">

     <ImageView
         android:id="@+id/img_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_40sdp"
         android:src="@drawable/back"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_apply"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/apply_for_a_loan"
          android:textColor="@color/blue"
          android:layout_marginStart="@dimen/_30sdp"
          android:textSize="@dimen/_18sdp"
          android:layout_marginTop="@dimen/_30sdp"
          app:layout_constraintStart_toEndOf="@+id/img_back"
          app:layout_constraintTop_toTopOf="parent"
          />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_howmuch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_much_do_you_want_to_borrow"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_apply"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_loan_amount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:singleLine="true"
            android:maxLines="1"
            android:textStyle="bold"
            android:paddingStart="@dimen/_10sdp"
            android:inputType="number"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/editext_background"
            app:layout_constraintTop_toBottomOf="@+id/tv_howmuch"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_why"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/why_are_you_want_loan"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_loan_amount"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:singleLine="true"
            android:maxLines="1"
            android:textStyle="bold"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/editext_background"
            app:layout_constraintTop_toBottomOf="@+id/tv_why"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_running"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_you_any_running_loan"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_comment"
            />

      <RadioGroup
          android:id="@+id/rd_loan"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_10sdp"
          android:orientation="horizontal"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_running">

        <RadioButton
            android:id="@+id/rd_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/black"
            />

          <RadioButton
              android:id="@+id/rd_no"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="true"
              android:layout_marginStart="@dimen/_20sdp"
              android:text="@string/no"
              android:textColor="@color/black"
              />

      </RadioGroup>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/rd_loan"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/adarsh_gradient"
                android:text="@string/apply"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/white"
                />
        </com.google.android.material.card.MaterialCardView>
        <include
            android:id="@+id/constraint_progressbar"
            layout="@layout/layout_progress_bar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>