<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_30sdp"
        android:paddingEnd="@dimen/_28sdp"
        android:background="@drawable/adarsh_gradient"
        tools:context=".ui.LoginActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/loan"
            android:textColor="@color/white"
            android:textSize="@dimen/_48sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/loan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/fullname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColorHint="@color/gray"
          android:layout_marginTop="@dimen/_24sdp"
          app:layout_constraintTop_toBottomOf="@+id/register"
          app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/full_name"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:maxLines="1"
            android:drawablePadding="@dimen/_18sdp"
            android:drawableStart="@drawable/user"
            />
      </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintTop_toBottomOf="@+id/fullname"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/mobile_number"
                android:textColor="@color/black"
                android:inputType="phone"
                android:maxLength="10"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/_18sdp"
                android:drawableStart="@drawable/mobile"
                />
        </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/spinner_background"
                android:paddingStart="@dimen/_30sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/mobile_number"
                app:layout_constraintStart_toStartOf="parent"
                />


     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/gender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/gender"
         android:layout_marginTop="@dimen/_13sdp"
         android:textColor="@color/white"
         android:textSize="@dimen/_16sdp"
         app:layout_constraintTop_toBottomOf="@+id/state"
         app:layout_constraintStart_toStartOf="parent"
         />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_only"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:checked="true"
            android:enabled="false"
            android:paddingStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/state"
            app:layout_constraintStart_toEndOf="@+id/gender"
            />


       <CheckBox
           android:id="@+id/ch_terms"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:textSize="@dimen/_12sdp"
           android:paddingStart="@dimen/_10sdp"
           android:layout_marginTop="@dimen/_30sdp"
           android:text="@string/by_continuing_you_accept_our_privacy_policy_and_term_of_use"
           app:layout_constraintTop_toBottomOf="@+id/gender"
           app:layout_constraintStart_toStartOf="parent"
           />

     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_40sdp"
         app:cardCornerRadius="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@+id/ch_terms"
         app:layout_constraintStart_toStartOf="parent">

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/bt_submit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/adarsh_gradient"
          android:text="Continue"
          android:textStyle="bold"
          android:textSize="@dimen/_18sdp"
          android:textColor="@color/white"
          />

     </com.google.android.material.card.MaterialCardView>

        <include
            android:id="@+id/constraint_progressbar"
            layout="@layout/layout_progress_bar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>