<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp"
        android:background="@drawable/adarsh_gradient"
        tools:context=".ui.VerifyOTPActivity">

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/verifymobile"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_20sdp"
          android:textStyle="bold"
          android:gravity="center_horizontal"
          android:layout_marginTop="@dimen/_80sdp"
          android:textColor="@color/white"
          android:text="@string/verify_phone_number"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fourdigit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/gray"
            android:text="@string/a_four_digit_code_hase_been_sent_to_your_mobile_number"
            app:layout_constraintTop_toBottomOf="@+id/verifymobile"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kindlyenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/white"
            android:text="@string/kindly_enter_the_code_to_continue"
            app:layout_constraintTop_toBottomOf="@+id/fourdigit"
            app:layout_constraintStart_toStartOf="parent"
            />

     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cons_otp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/kindlyenter">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_otp1"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="1"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/black"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/et_otp2"
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginStart="@dimen/_12sdp"
             android:singleLine="true"
             android:maxLines="1"
             android:maxLength="1"
             android:gravity="center"
             android:inputType="number"
             android:textColor="@color/black"
             android:background="@color/white"
             app:layout_constraintStart_toEndOf="@+id/et_otp1"
             app:layout_constraintTop_toTopOf="parent"
             />
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/et_otp3"
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginStart="@dimen/_12sdp"
             android:singleLine="true"
             android:maxLines="1"
             android:maxLength="1"
             android:gravity="center"
             android:inputType="number"
             android:textColor="@color/black"
             android:background="@color/white"
             app:layout_constraintStart_toEndOf="@+id/et_otp2"
             app:layout_constraintTop_toTopOf="parent"
             />

         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/et_otp4"
             android:layout_width="@dimen/_50sdp"
             android:layout_height="@dimen/_50sdp"
             android:layout_marginStart="@dimen/_12sdp"
             android:singleLine="true"
             android:maxLines="1"
             android:maxLength="1"
             android:gravity="center"
             android:inputType="number"
             android:textColor="@color/black"
             android:background="@color/white"
             app:layout_constraintStart_toEndOf="@+id/et_otp3"
             app:layout_constraintTop_toTopOf="parent"
             />

     </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:textColor="@color/white"
            android:text="@string/resend_otp"
            app:layout_constraintTop_toBottomOf="@+id/cons_otp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:textColor="@color/red"
            android:text="@string/resend_otp"
            app:layout_constraintTop_toBottomOf="@+id/cons_otp"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/resend"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/adarsh_gradient"
                android:text="@string/next"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/white"
                />
        </com.google.android.material.card.MaterialCardView>

        <include
            android:id="@+id/constraint_progressbar"
            layout="@layout/layout_progress_bar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>